made babbles change color, and lamp click

--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
   margin: 0;
 }
 
+body {
+  display: grid;
+  grid-template-columns: 35% 65%;
+  background-color: beige;
+}
+
 html {
   overflow-y: hidden;
 }
