--- a/style.css
+++ b/style.css
@@ -25,18 +25,44 @@
   background-color: #eae0c2;
   width: 92%;
   height: 92%;
+  display: flex;
+  flex-direction: column;
 }
+
 .restart {
-  font-size: 50px;
   font-weight: bold;
   color: #fff200;
   background-color: #9a512f;
-  border-radius: 15px;
+  box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  display: block;
+  border-radius: 50em;
+  position: relative;
+  text-align: center;
+  width: max-content;
+  margin: 10px;
+  padding: 5px;
+}
+.next h1 {
+  padding: 0;
+  margin: 0;
+}
+.restart h1 {
+  padding: 0;
+  margin: 0;
 }
 .next {
-  font-size: 50px;
   font-weight: bold;
   color: #fff200;
   background-color: #9a512f;
-  border-radius: 15px;
+  box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  box-shadow: 0em -0.3rem 0em rgba(0, 0, 0, 0.1) inset;
+  display: block;
+  border-radius: 50em;
+  position: relative;
+  text-align: center;
+  width: max-content;
+  margin: 10px;
+  padding: 5px;
+  align-self: flex-end;
+  margin-top: auto;
 }
