--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
 .spin {
   -webkit-animation: rotation 5s infinite linear;
   transform-origin: center;
+  transform-box: fill-box;
 }
 @-webkit-keyframes rotation {
   from {
