--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+p {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 25px;
+}
+
 #iphone,
 #laptop {
   display: none;
