--- a/style.css
+++ b/style.css
@@ -17,33 +17,6 @@ p {
   display: none;
 }
 
-/*Washing-machine animation*/
-.wash {
-  animation: wash 10s;
-}
-
-@keyframes wash {
-  10%,
-  90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-
-  20%,
-  80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%,
-  50%,
-  70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%,
-  60% {
-    transform: translate3d(4px, 0, 0);
-  }
-}
 
 /*TV buttons turning animation*/
 .spin {
@@ -58,6 +31,8 @@ p {
   to {
     -webkit-transform: rotate(359deg);
   }
+
+/*Styling the modal*/
 .modal-bg {
   position: fixed;
   top: 0;
