--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ html {
   overflow-y: hidden;
 }
 
+#timeline {
+  font-size: 22px;
+}
 #open-book {
   transform-origin: center;
   transform-box: fill-box;
