fixed house size

--- a/style.css
+++ b/style.css
@@ -82,6 +82,11 @@ svg#bubble {
 svg#theBamboo {
   width: 30%;
 }
+
+svg#house {
+  width: 30%;
+}
+
 .content svg {
   max-width: 80%;
   display: block;
