--- a/style.css
+++ b/style.css
@@ -45,6 +45,13 @@ h2 {
   margin: auto;
 }
 
+.lamp,
+.bubbles,
+.process-lamp {
+  width: 100%;
+  max-height: 50vh;
+}
+
 /*Hides the light of the lamp*/
 #light-standlamp {
   display: none;
@@ -82,6 +89,11 @@ svg#bubble {
 svg#theBamboo {
   width: 30%;
 }
+
+.process-lamp #lamp {
+  height: 50vh;
+}
+
 .content svg {
   max-width: 80%;
   display: block;
