--- a/style.css
+++ b/style.css
@@ -126,8 +126,15 @@ svg#house {
   width: 30%;
 }
 
-svg#power-plant {
+/* svg#power-plant {
   width: 30%;
+} */
+
+.work-impact-container,
+.technology-container,
+.lifestyle-container {
+  width: 100%;
+  max-height: 50vh;
 }
 
 .process-lamp #lamp {
