--- a/style.css
+++ b/style.css
@@ -126,13 +126,13 @@ svg#house {
   width: 30%;
 }
 
-/* svg#power-plant {
+svg#power-plant {
   width: 30%;
-} */
+}
 
 .work-impact-container,
-.technology-container,
-.lifestyle-container {
+.lifestyle-container,
+.technology-container {
   width: 100%;
   max-height: 50vh;
 }
