added width and height for .content

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html {
 
 p {
   font-family: Georgia, Times, "Times New Roman", serif;
-  font-size: 3vw;
+  font-size: 2vw;
   max-width: 80%;
   margin: auto;
 }
@@ -117,6 +117,7 @@ svg#house {
   max-width: 80%;
   display: block;
   margin: auto;
+  max-height: 50vh;
 }
 .modal-bg {
   position: fixed;
@@ -179,4 +180,9 @@ svg#house {
   padding: 5px;
   align-self: flex-end;
   margin-top: auto;
+}
+
+.content {
+  height: 90%;
+  width: 100%;
 }
